--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-google-maps",
+  "name": "bnm-angular-google-maps",
   "version": "2.4.1",
   "description": "AngularJS directives for Google Maps",
   "repository": {
